updated styling of ThoughtForm and its components

--- a/code/src/components/comments.css
+++ b/code/src/components/comments.css
@@ -49,7 +49,7 @@
   border: none;
 	border-radius: 3px;
   background-color: #ffe6e6;
-  font-family: 'Limelight', cursive;
+  font-family: 'Inconsolata', monospace;
   font-size: 12px;
   text-decoration: none;
   cursor: pointer;
