--- a/code/src/components/newthought.css
+++ b/code/src/components/newthought.css
@@ -1,16 +1,27 @@
+.thought-question-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .thought-question {
-  margin-top: 0;
+  margin: 0 0 5px 0;
   font-size: 12px;
   font-weight: bolder;
 }
 
+.word-counter {
+  margin: 0 0 5px 0;
+  font-size: 12px;
+}
+
 .text-field {
-  width: 96%;
+  width: 97%;
   height: 45px;
   margin-bottom: 5px;
   padding: 4px;
-  -webkit-border-radius: 0;
-  border-radius: 0;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  border: none;
   resize: none;
   font-size: 10px;
 }
