--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,9 +19,14 @@ code {
     monospace;
 }
 
+.label {
+  margin-top: 0px;
+  margin-bottom: 6px;
+}
+
 .allThoughts {
   font-family: Spicy Rice;
-  font-size: 45px;
+  font-size: 49px;
   color: rgb(255, 80, 112);
   padding-top: 20px;
   width: 350px;
@@ -33,7 +38,7 @@ code {
 .newThoughtCard {
   color: black;
   max-width: 350px;
-  height: 160px;
+  height: 200px;
   background-color: rgb(227, 224, 224);
   display: flex;
   flex-direction: column;
@@ -51,8 +56,22 @@ code {
 .textinput {
   margin-bottom: 12px;
   width: 95%;
-  height: 58px;
-  padding: 8px 1px;
+  height: 50px;
+  padding: 4px 4px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  resize: none;
+  font-family: "Inconsolata", "Courier New";
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.nameinput {
+  margin-bottom: 12px;
+  width: 95%;
+  height: 22px;
+  padding: 2px 1px;
   box-sizing: border-box;
   border: 2px solid #ccc;
   border-radius: 4px;
@@ -66,6 +85,7 @@ code {
   width: 95%;
   display: flex;
   justify-content: space-between;
+  margin-top: 2px;
 }
 
 .sendButton {
@@ -86,7 +106,7 @@ code {
 
 .thoughtsCard {
   max-width: 350px;
-  height: 110px;
+  height: 120px;
   background-color: fff;
   display: flex;
   flex-direction: column;
@@ -109,6 +129,13 @@ code {
   color: black;
 }
 
+.thoughtBy {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: red;
+  text-align: right;
+}
+
 .heartSection {
   display: flex;
   justify-content: space-between;
@@ -117,6 +144,7 @@ code {
   align-items: center;
   height: 30px;
   margin-left: 0px;
+  margin-top: 2px;
 }
 
 .heartSection button {
