--- a/code/src/components/ThoughtsList.css
+++ b/code/src/components/ThoughtsList.css
@@ -15,23 +15,6 @@
   margin-top: 20px;
 }
 
-.hearts {
-  font-family: "Courier New", Courier, monospace;
-  margin: 8px 0;
-  font-size: 12px;
-  color: #6e6e6e;
-}
-.like-button {
-  margin: 10px 10px 0 0;
-  background-color: #f2f0f0;
-  width: 30px;
-  height: 30px;
-  border: none;
-  border-radius: 50%;
-  transform: scale();
-  box-sizing: border-box;
-}
-
 .message-time {
   font-family: "Courier New", Courier, monospace;
   margin: 8px;
@@ -41,4 +24,19 @@
 
 .message {
   margin: 0;
+}
+
+.loader {
+  border: 16px solid #fff;
+  border-top: 16px solid #000;
+  border-radius: 50%;
+  margin: 40px auto;
+  width: 50px;
+  height: 50px;
+  animation: spin 0.5s linear infinite;
+  @keyframes spin {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
 }
