--- a/code/src/index.css
+++ b/code/src/index.css
@@ -15,7 +15,7 @@ code {
 
 @media (min-width: 640px) {
   body {
-    background-color: #ffe6e6;
+    background-color: #fbdada;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='183' height='183' viewBox='0 0 20 20'%3E%3Cg %3E%3Cpolygon fill='%23fbfbfb' points='20 10 10 0 0 0 20 20'/%3E%3Cpolygon fill='%23fbfbfb' points='0 10 0 20 10 20'/%3E%3C/g%3E%3C/svg%3E");
   }
 }
