--- a/code/src/components/new-thought.css
+++ b/code/src/components/new-thought.css
@@ -4,13 +4,26 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 200px;
 }
 
 h2 {
   font-size:18px;
   font-weight: normal;
-  margin: 0;
+  margin: 0 0 5px 0;
+}
+
+.form-inputs {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.input-name {
+  margin: 0 0 10px 0;
+  border: 1px solid #000;
+  height: 25px;
 }
 
 textarea.form-textarea {
@@ -19,6 +32,7 @@ textarea.form-textarea {
   height: 50px;
   width: 100%;
   resize: none;
+  border: 1px solid #000;
 }
 
 .button-count {
@@ -26,6 +40,7 @@ textarea.form-textarea {
   justify-content: space-between;
   align-items: stretch; 
   width: 100%;
+  margin: 15px 0 0 0;
 }
 
 .form-button {
@@ -35,6 +50,7 @@ textarea.form-textarea {
   padding: 12px;
   font-size: 18px;
   width: 250px;
+  height: 60px;
   transition: all 0.3s ease-in-out;
 }
 
