--- a/code/src/index.css
+++ b/code/src/index.css
@@ -127,6 +127,7 @@ code {
   margin-bottom: 10px;
   font-size: 16px;
   color: black;
+  font-size: 15px;
 }
 
 .thoughtBy {
@@ -134,6 +135,7 @@ code {
   font-size: 16px;
   color: red;
   text-align: right;
+  font-size: 12px;
 }
 
 .heartSection {
