--- a/code/src/app.css
+++ b/code/src/app.css
@@ -2,16 +2,34 @@
     box-sizing: border-box;
 }
 
+
+
 .flex-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    margin-bottom: 20px;
+    background-size: 200% 200%;
+    background-image: linear-gradient(270deg, #e66465, #9198e5);
+    animation: Test 20s ease infinite;
+}
+
+@keyframes Test {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+
+
+.filter-container {
+    display: flex;
+    width: 90%;
+    justify-content: space-around;
+    margin-top: 30px;
+    align-items: center;
 }
 
 .thoughts-container {
-    width: 90%;
+    width: 70%;
     border: 1px solid black;
     box-shadow: 5px 5px;
     margin-top: 30px;
@@ -19,6 +37,7 @@
     flex-direction: column;
     padding: 15px;
     overflow-wrap: break-word;
+    background-color: white;
 }
 
 .likes-and-time {
@@ -43,8 +62,14 @@
     font-size: 20px;
 }
 
+
+
 @media (min-width: 680px) {
     .thoughts-container {
+        width: 50%;
+    }
+
+    .filter-container {
         width: 50%;
     }
 }
