--- a/code/src/index.css
+++ b/code/src/index.css
@@ -47,6 +47,19 @@ h1 {
   font-size: 16px;
 }
 
+span {
+  font-size: 16px;
+}
+
+.form-text-name {
+  padding: 1px 10px;
+  font-size: 16px;
+  font-family: 'Oxygen Mono', monospace;
+  border: none;
+  border-bottom: 1px solid black;
+  background-color: rgb(236, 236, 236);
+}
+
 .validation-black {
   color: black;
   align-self: flex-end;
@@ -80,6 +93,12 @@ h1 {
 
 .message-cards p {
   overflow-wrap: break-word;
+}
+
+.message-sender {
+  align-self: flex-end;
+  margin: 0px;
+  font-size: 16px;
 }
 
 .message-time {
