--- a/code/src/components/card.css
+++ b/code/src/components/card.css
@@ -5,9 +5,13 @@
   display: flex;
   flex-direction: column;
   width: 70%;
-  background-color: #f0f0f0;
+  background-color: #ecdbe5;
   box-shadow: 8px 8px  1px black;
   -moz-box-shadow: 8px 8px  1px black;
   -webkit-box-shadow: 8px 8px  1px black;
   -o-box-shadow: 8px 8px  1px black;         
+}
+
+.firstCard {
+  background-color: #ff9ad5;
 }
