--- a/code/src/Components/thoughtslist.css
+++ b/code/src/Components/thoughtslist.css
@@ -17,6 +17,10 @@
   font-size: 14px;
 }
 
+.message-p {
+  margin: 5px 0px 15px 0px;
+}
+
 .thought-message button {
   border: 2px solid lightgray;
   border-radius: 50%;
@@ -34,6 +38,17 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+}
+
+.likes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.like-count {
+  margin-left: 5px;
 }
 
 .superLiked {
