--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,16 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('media/joe-woods-4Zaq5xY5M_c-unsplash.jpg');
-  background-repeat:no-repeat;
-  background-size:cover;
-  display: flex;
-  justify-content: center;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.submit-form-container {
+  margin: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-text{
