--- a/code/src/components/card.css
+++ b/code/src/components/card.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   width: 70%;
+  word-wrap: break-word;
   background-color: #ecdbe5;
   box-shadow: 8px 8px  1px black;
   -moz-box-shadow: 8px 8px  1px black;
