--- a/code/src/components/likeHearts.css
+++ b/code/src/components/likeHearts.css
@@ -9,8 +9,16 @@ button {
   border-width: 0;
   height: 40px;
   width: 40px;
-  padding-top: 10px;
   transition: 0.4s;
+}
+
+button p {
+  margin-block-start: 0;
+  justify-content: center;
+}
+
+button p:before {
+  content: "❤️";
 }
 
 button:hover:enabled {
