--- a/code/src/components/messageInput.css
+++ b/code/src/components/messageInput.css
@@ -16,15 +16,15 @@
   background-color: #f2f0f0;
 }
 
-p {
+h4 {
   margin-block-start: 0;
+   font-weight: normal;
 }
 
-h4 {
+p {
   display: flex;
   font-size: 14px;
   color: grey;
-  font-weight: normal;
   margin: 0;
   justify-content: flex-end;
 }
@@ -41,7 +41,15 @@ h4 {
   padding: 10px;
   background-color: #ffadad;
   border-width: 0;
-  transition: 0.4s;
+  transition: 0.4s; 
+}
+
+.btn h4:before {
+  content: "❤️";
+}
+
+.btn h4:after {
+  content: "❤️";
 }
 
 .btn:hover:enabled {
