--- a/code/src/MessageListStyle.css
+++ b/code/src/MessageListStyle.css
@@ -14,25 +14,23 @@
     display: flex;
     font-family: 'Courier', monospace;
 }
-.heart-and-time-container {
-    display: flex;
-    flex-direction: row;    
-    color: gray;
-    font-size: 11px;
-    font-family: Arial, Helvetica, sans-serif;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-
-}
-
-.heart-container {
+.heart-box {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-.time-container {
+.heart-box button {
+    width: 35px;
+    height: 35px;
+    padding: 2px;
+    margin: 5px;
+    border: 0;
+    border-radius: 50%;
+    background-color: rgba(187, 184, 184, 0.447);
+}
+
+.time-box {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
 }
