--- a/code/src/PostMessagesStyle.css
+++ b/code/src/PostMessagesStyle.css
@@ -8,9 +8,7 @@
     width: auto;
     border: none;
     margin: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-
+    padding: 15px;
 }
 
 .input-box {
