--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -4,9 +4,9 @@
   justify-content: space-between;
   align-items: flex-start;
   height: fit-content;
-  width: 300px;
-  margin: 20px;
-  padding: 15px;
+  width: 28em;
+  margin: 1em;
+  padding: 1.5em;
   background-color: lightgrey;
   font-family: 'Courier New', Courier, monospace;
   font-size: 10px;
@@ -22,11 +22,11 @@
 .form-button {
   font-family: 'Courier New', Courier, monospace;
   height: 30px;
-  width: 60%;
+  width: 70%;
   background-color: salmon;
   border: none;
   border-radius: 15px;
-  padding: 5px;
+  padding-bottom: 1em;
   font-weight: bolder;
   
 }
