--- a/code/src/MessageList.css
+++ b/code/src/MessageList.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: space-between;
   height: fit-content;
-  width: 300px;
+  width: 23em;
+  padding: 1.5em; 
+  margin: 1em;
   background-color: whitesmoke;
-  padding: 15px; 
   box-shadow: 7px 7px black;
-  margin: 20px;
   font-family: 'Courier New', Courier, monospace;
   font-size: 12px;
 }
@@ -32,7 +32,6 @@
 }
 .like-button span {
   margin-left: 2px;
-  line-height: 2.8;
 }
 .message-time {
   width: 100%;
