--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,9 +3,37 @@ body {
   font-family: 'Trispace', sans-serif;
 }
 
-.thought-card {
+.thought-card, .thoughts-form {
   margin: 20px auto;
   border: 2px solid black;
   width: 500px;
   box-shadow: 5px 5px;
+  padding: 20px;
+}
+
+.thoughts-form {
+  background-color: #f2f0f0;
+  display: flex;
+  flex-direction: column;
+}
+
+.form-title {
+  margin-top: 0;
+  font-weight: bold;
+}
+
+.form-button {
+  margin-top: 20px;
+  width: 250px;
+  background-color: #ffadad;
+  border: none;
+  padding: 10px;
+  border-radius: 30px;
+  font-family: 'Trispace', sans-serif;
+  font-weight: bold;
+}
+
+textarea {
+  font-size: 17px;
+  font-family: 'Trispace', sans-serif;
 }
