--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,44 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.happy-form-wrapper,
+.happy-thought-wrapper {
+  border: 1px solid black;
+  width: 310px;
+  margin-bottom: 30px;
+  box-shadow: 5px 5px black;
+  padding: 0 10px;
+}
+
+.heart {
+  color: red;
+  font-size: 200%;
+}
+
+.button-heart {
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  border: none;
 }
