--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+form {
+  height: 200px;
+  width: 400px;
+  border: solid black 1px;
+  font-family: 'Inconsolata', monospace;
+  box-shadow: 6px 6px black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  font-family: 'Inconsolata', monospace;
+  border-radius: 30px;
+  padding: 10px;
+  margin: 10px;
+}
+
+.message {
+  font-family: 'Inconsolata', monospace;
+  border: solid black 1px;
+  box-shadow: 6px 6px black;
+  width: 400px;
+
+}
+
+
