--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,162 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: Menlo, "Inconsolata", "Ubuntu Mono", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+.app-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 30px;
+}
+
+.form {
+	background-color: lightgray;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 5px 5px;
+	width: 310px;
+}
+
+.input-label {
+	font-weight: bold;
+}
+
+.text-input {
+	width: 100%;
+	height: 90px;
+	margin: 20px 0 0 0;
+}
+
+textarea {
+	resize: none;
+	font-family: Menlo, "Inconsolata", "Ubuntu Mono", sans-serif;
+}
+
+.input-ok {
+	margin-top: 0;
+}
+
+.submit-button {
+	border-radius: 20px;
+	height: 40px;
+	width: 218px;
+	border: none;
+	font-family: Menlo, "Inconsolata", "Ubuntu Mono", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-weight: bold;
+}
+
+.submit-button:hover {
+	background-color: #f8cad9;
+}
+
+.thoughts-list {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-auto-rows: auto;
+	grid-gap: 2rem;
+	justify-items: center;
+	justify-content: center;
+	padding-top: 20px;
+}
+
+.thought-card {
+	padding: 20px;
+	border: 1px solid black;
+	width: 300px;
+	box-shadow: 5px 5px;
+	animation: fadeIn 2s;
+}
+
+.bottom-container {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+.message {
+	font-weight: bold;
+}
+
+.date {
+	color: #808080;
+}
+
+.like-button,
+.disabled-button {
+	margin-right: 10px;
+	border-radius: 50%;
+	height: 40px;
+	width: 40px;
+	border: none;
+	background-color: #f8cad9;
+}
+
+.like-button,
+.submit-button {
+	cursor: pointer;
+}
+
+.disabled-button {
+	cursor: initial;
+}
+.like-counter {
+	display: flex;
+	align-items: center;
+	align-self: flex-end;
+	position: sticky;
+	top: 28px;
+	animation: fadeIn 2s;
+}
+
+.loader {
+	border: 16px solid #f3f3f3;
+	border-top: 16px solid #ff8000;
+	border-radius: 50%;
+	width: 80px;
+	height: 80px;
+	animation: spin 1s linear infinite;
+	margin-top: 50px;
+}
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.thoughts-list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.form {
+		width: 630px;
+	}
 }
