moved the POST part from HappyForm to App and added some more styling

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,6 +31,17 @@ code {
   padding: 0 10px;
 }
 
+.happy-thought-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.happy-thought-title {
+  flex-basis: 100%;
+}
+
 .heart {
   color: red;
   font-size: 200%;
