--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,6 +18,7 @@ code {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 50px;
 }
 
 .header {
@@ -42,7 +43,7 @@ code {
 	padding: 20px;
 	display: flex;
 	flex-direction: column;
-	box-shadow: 5px 5px;
+	box-shadow: 5px 5px 2px;
 	width: 310px;
 }
 
@@ -99,7 +100,7 @@ textarea {
 	padding: 20px;
 	border: 1px solid black;
 	width: 300px;
-	box-shadow: 5px 5px;
+	box-shadow: 5px 5px 2px;
 	animation: fadeIn 2s;
 }
 
@@ -111,9 +112,12 @@ textarea {
 }
 .message {
 	font-weight: bold;
+	font-size: 14px;
 }
 
-.date {
+.date,
+.number-of-initial-likes,
+.number-of-likes {
 	color: #808080;
 	font-size: 12px;
 }
@@ -128,8 +132,17 @@ textarea {
 	background-color: #f8cad9;
 }
 
+.no-likes-button {
+	margin-right: 10px;
+	border-radius: 50%;
+	height: 40px;
+	width: 40px;
+	border: none;
+	background-color: lightgray;
+}
 .like-button,
-.submit-button {
+.submit-button,
+.no-likes-button {
 	cursor: pointer;
 }
 
