--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,131 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
+
+}
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Roboto Mono', monospace;
+  background-color: #e8e9eb;
+  width: 50%;
+  padding: 40px; 
+  border: 1px solid black;
+  box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+-webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+-moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+}
+
+.form-conatiner {
+  
+}
+
+.form-conatiner label{
+  display: flex;
+  flex-direction: column;
+}
+
+input[type=text], select {
+  width: 95%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  font-size: 18px; 
+  padding-inline-start: 5px;
+}
+
+
+button {
+  display: flex;
+  justify-content: center;
+  width: 80%;
+  margin-top: 10px;
+  border: none;
+  border-radius: 25px;
+  color: #000;
+  background-color: #d9fcc2;
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  cursor: pointer; 
+}
+
+
+
+/** Prevoius messages **/
+
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.previous-messages {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Roboto Mono', monospace;
+  background-color: #fff;
+  width: 50%;
+  min-height: 120px;
+  padding: 40px; 
+  border: 1px solid black;
+  box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+-webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+-moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
+
+}
+
+
+
+
+
+
+@media screen and (min-width: 667px) and (max-width:1024px) { 
+
+  .form {
+    width: 40%;
+  }
+
+
+  button {
+    width: 70%;
+    font-size: 14px;
+    padding: 10px 18px;
+     
+    }
+
+
+}
+
+
+
+
+
+
+
+/** MEDIA QUERIES DESKTOP **/
+
+@media screen and (min-width: 1024px) {
+
+  .form {
+    width: 40%;
+  }
+
+
+  button {
+  width: 50%;
+  font-size: 16px;
+  padding: 15px 32px;
+   
+  }
+ }
