install and import momentjs, added message time to List

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -95,8 +95,12 @@ button {
 
 }
 
-
-
+.message-time {
+  display: flex;
+  justify-content: flex-end; 
+  padding-top: 80px;
+  color: #b3b2b1;
+}
 
 
 
