--- a/code/src/components/Styles.scss
+++ b/code/src/components/Styles.scss
@@ -8,28 +8,44 @@ body {
   font-family: menlo;
 }
 
-.main {
-  display: grid;
-  row-gap: 30px;
-  margin: 0 auto;
+.App {
+  margin: 50px auto;
   width: 100%;
   max-width: 500px;
+
+  &__grid {
+    display: grid;
+    row-gap: 50px;
+  }
+
+  &__item {
+    padding: 30px;
+    border: 1px solid #000;
+    box-shadow: 10px 10px #000;
+
+    &--gray {
+      background: #f2f0f0;
+    }
+  }
 }
 
 .Form {
-  background: #f2f0f0;
-  padding: 30px;
-  border: 1px solid #000;
-
   &__label {
     display: flex;
     flex-direction: column;
+  }
+
+  &__header {
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 0;
   }
 }
 
 .form-wrapper {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
 .post {
@@ -40,9 +56,12 @@ body {
   background: #f4acac;
   border: none;
   border-radius: 50px;
-  padding: 3px 25px;
+  padding: 0 25px;
 
-  &--disabled {
+  &--round {
+    border-radius: 50%;
+    width: 40px;
+    padding: 10px;
   }
 }
 
