--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,30 +12,55 @@ code {
     monospace;
 }
 
-form {
-  height: 200px;
-  width: 400px;
-  border: solid black 1px;
-  font-family: 'Inconsolata', monospace;
-  box-shadow: 6px 6px black;
+.app-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
-button {
+/*FORM STYLING*/
+
+form {
+  max-width: 350px;
+  border: solid black 1px;
+  font-family: 'Inconsolata', monospace;
+  box-shadow: 6px 6px black;
+  background-color: #f2f0f0;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
+.send-button {
   font-family: 'Inconsolata', monospace;
   border-radius: 30px;
+  border: none;
   padding: 10px;
   margin: 10px;
+  background-color: #ffadad;
 }
+
+/*THOUGHTS STYLING*/
 
 .message {
   font-family: 'Inconsolata', monospace;
   border: solid black 1px;
   box-shadow: 6px 6px black;
-  width: 400px;
+  max-width: 350px;
+  padding: 10px;
+  margin-bottom: 30px;
+}
 
+.like-button {
+  border-radius: 50%;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  background-color: #ffadad;
+  display: block;
 }
 
 
