--- a/code/src/index.css
+++ b/code/src/index.css
@@ -46,3 +46,10 @@ textarea {
 .text-counter {
   font-size: 12px;
 }
+
+.heart-button {
+  padding: 12px;
+  margin-right: 7px;
+  border: none;
+  border-radius: 50%;
+}
