--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('./freestocks-Y9mWkERHYCU-unsplash.jpg');
+  background-image: url('./Components/assests/freestocks-Y9mWkERHYCU-unsplash.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -92,4 +92,36 @@ form {
 
 .got-likes {
   background: #ffadad;
+}
+
+/************* FOOTER **************/
+footer {
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 100px;
+  background: rgba(209,127,109, 0.7);
+  margin-top: 50px;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: black;
+}
+
+.footer-info {
+  text-align: center;
+}
+
+.logo {
+  width: 100px;
+}
+
+.reference {
+  width: 100px;
+  text-align: center;
 }
