styling added for inputmessage

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -37,12 +37,13 @@ form {
 }
 
 .submit-button {
-  width: 200px;
+  width: 185px;
   height: 30px;
   border-radius: 50px;
   background: #ffadad;
   cursor: pointer;
   border: none;
+  font-family: 'Inconsolata', monospace;
 }
 /*************** MESSAGES LIST ************/
 .message-list {
@@ -68,10 +69,11 @@ form {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 10px;
 
 }
 
-.time-stamp {
+.grey-style {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   color: grey;
