--- a/code/src/index.css
+++ b/code/src/index.css
@@ -70,7 +70,6 @@ form {
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
-
 }
 
 .grey-style {
@@ -86,6 +85,27 @@ form {
   cursor: pointer;
   border: none;
   margin-right: 5px;
+}
+
+.likes-button:hover {
+  background: rgba(255, 82, 82, 1);
+  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.90);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+  }
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
 }
 
 .no-likes {
