--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,70 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.container {
+  position: relative;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+header {
+  box-sizing: border-box;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  padding: 30px;
+}
+
+section {
+  box-sizing: border-box;
+  padding: 0 30px;
+}
+
+.thought {
+  width: 250px;
+  margin-bottom: 15px;
+  border: 1px solid black;
+  box-shadow: 5px 5px black;
+}
+
+.message {
+  margin: 10px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 10px;
+  padding: 10px;
+}
+
+.likes {
+  display: flex;
+  align-items: center;
+}
+
+.like-button {
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 50%;
+  background-image: url(./assets/heart.svg);
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: center;
+  margin-right: 5px;
+}
+
+.time {
+  color: darkgrey;
+}
+
+footer {
+  box-sizing: border-box;
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  padding: 30px;
+}
