Fix favicon and styled Thoughts cards

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -53,3 +53,15 @@ textarea {
   border: none;
   border-radius: 50%;
 }
+
+.time-created {
+  color: #a09993;
+}
+
+.heart-time-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 500px;
+}
