--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -1,4 +1,22 @@
-.message-input{
-    height: 60px;
-    width: 200px;
+h3 {
+    margin: 0;
+}
+
+.button {
+    height: 50px;
+    width: 30%;
+    background-color: #ffadad;
+    border: none;
+    font-size: 2.2vw;
+    border-radius: 25px;
+    padding: 10px;
+    font-weight: 500;
+}
+
+textarea {
+    width: 80%;
+    resize: none;
+    padding: 10px;
+    box-sizing: border-box;
+    margin: 10px 0;
 }
