--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,62 @@
 body {
-  margin: 0;
+  margin-top: 100px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.form-container {
+border:solid green 2px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+
+.message {
+border:solid black 1px;
+width: 300px;
+padding-top: 20px;
+padding-bottom: 10px;
+padding-left: 10px;
+padding-right: 10px ;
+background-color: #f1efef;
+box-shadow: 8px 8px black;
+margin-bottom: 30px;
+}
+
+.form {
+display: flex;
+flex-direction: row-reverse;
+justify-content: space-between;
+align-items: center;
+margin-top:20px;
+margin-bottom:0px;
+width: 100%;
+}
+
+.like {
+display: flex;
+justify-content: center;
+align-items: center;
+width: 40px;
+height: 40px;
+background-color: rgba(221, 217, 217, 0.667);
+border-radius: 50%;;
+}
+
+
+.message-time {
+font-size: 11px;
+color: grey;
+margin-left: 10px;
+}
+
