Added a text saying how many thoughts user has liked during a session

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -65,3 +65,13 @@ textarea {
   align-items: center;
   width: 500px;
 }
+
+.posts-liked-counter {
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 500px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  background-color: #ffadad;
+  font-weight: bold;
+}
