--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
 body {
   margin: 0;
+  background: #F5F5F5;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,3 +14,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.wrapper {
+  margin: 30px;
+}
+
+.message {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+}
+
+.message-time {
+  font-size: 15px;
+  margin-left: 10px;
+}
+
+.message-card {
+  width: 300px;
+  height: 150px;
+  border: 3px solid #989898;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+
