--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -6,9 +6,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 15px auto;
+  margin: 20px auto;
   padding: 18px;
-  background-color: rgba(255, 192, 203, 0.292);
+  background-color: #ffe9f4;
 }
 
 .happy-thought h3 {
@@ -21,10 +21,10 @@
 .happy-thought button {
   border-radius: 50%;
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
+  margin-top: 30px;
   margin-right: 5px;
-  /* background-color: white; */
 }
 
 .happy-thought button:hover {
@@ -33,9 +33,10 @@
   /* ONLY SHOWS HOVER COLOR ON SOME BUTTONS? */
 }
 
-.happy-thought button span {
-  margin-left: 1.5px;
-  line-height: 2.5;
+.heart {
+  margin-left: 1.2px;
+  margin-right: 1.2px;
+  font-size: 22px;
 }
 
 .liked {
@@ -46,4 +47,7 @@
 }
 .not-liked {
   background-color: rgba(211, 211, 211, 0.415);
+}
+p {
+  padding-left: 10px;
 }
