--- a/code/src/Components/HappyForm.css
+++ b/code/src/Components/HappyForm.css
@@ -1,3 +1,10 @@
-form {
+.form-wrapper {
   align-items: center;
+}
+
+.submit-button{
+  font-size: 1.5em;
+  border-radius: 25px;
+  padding: 10px;
+  border: none;
 }
