--- a/code/src/components/app.css
+++ b/code/src/components/app.css
@@ -6,3 +6,10 @@
   box-shadow: 6px 6px 0px #000;
   background-color: #ffe8e8;
 }
+h1 {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto;
+  font-weight: 500;
+}
