--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,7 +17,15 @@ code {
 
 .wrapper {
   margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
 }
+
+/* .cards-container{
+
+} */
 
 .message {
   font-family: 'Montserrat', sans-serif;
@@ -29,12 +37,37 @@ code {
   margin-left: 10px;
 }
 
-.message-card {
-  width: 300px;
-  height: 150px;
+.message-card, .form-card {
+  width: 400px;
+  min-height: 200px;
   border: 3px solid #989898;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   padding: 10px;
+}
+
+.form-card{
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: space-around;
+
+}
+
+.form-button{
+  background:  #ffadad;
+  width: 185px;
+  height: 50px;
+  border-radius: 20px;
+  border: none;
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.input-text{
+  width: 360px;
+  height: 100px;
+  align-self: center;
 }
 
 
