--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,141 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: monospace, 'Courier New', Courier;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  font-size: 16px;
+  background: #fff;
+  display: flex;
+  /* flex-flow: column nowrap;
+  align-items: center;
+  align-content: center; */
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.app-container {
+  width: 500px;
+  /* background: paleturquoise; */
+}
+
+h1 {
+  margin-top: 60px;
+  font-size: 30px;
+  text-align: center;
+}
+
+/* Text form */
+form {
+  margin-top: 30px;
+  padding-top: 3px;
+  border: 2px solid #4d4d4d;
+  background: #f2f0f0;
+  box-shadow: 6px 7px;
+  /* flex-direction: column;
+  align-items: flex-start;
+  text-align: left; */
+}
+
+.post-prompt {
+  margin-left: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 17px;
+}
+
+.form-text {
+  height: 75px;
+  width: 460px;
+  margin: 0 15px;
+  padding: 8px 15px;
+  font: 500 16px monospace, 'Courier New', Courier;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #d3d3d3;
+  border-radius: 2px;
+  resize: none;
+  overflow: auto;
+}
+
+.counter {
+  color: #ccc;
+  background: green;
+
+}
+
+.submit-button {
+  margin: 10px 0 15px 15px;
+  padding: 10px 11px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 17px;
+  border: 0;
+  background: #ffadad;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.post-span {
+  margin: 12px;
+}
+
+/* Published posts */
+.pubPost {
+  min-height: 80px;
+  margin-top: 40px;
+  padding: 10px 16px;
+  box-shadow: 6px 7px;
+  border: 2px solid #4d4d4d;
+  /* background: lightseagreen; */
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.post-txt {
+  font-size: 18px;
+  background: #fff;
+}
+
+.post-info {
+  margin-bottom: 30px;
+  padding: 0;
+  height: 16px;
+  display: inline-block;
+  /* background: papayawhip; */
+}
+
+.post-time {
+  margin-top: 6px;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 14px;
+  color: #a6a6a6;
+  float: right;
+  /* background: hotpink */
+}
+
+.likes {
+  margin: -38px -2px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  background: #edebea;
+  cursor: pointer;
+}
+
+.heart-button { 
+  margin: 0px 13px;
+  font-size: 15px;
+  /* background: yellow; */
+  width: 200px;
+}
+
+.heart-button:after {
+  background: #ffadad;
+}
+
+.like-count {
+  margin: 6px 57px;
+  font-size: 15px;
+  color: #4d4d4d;
+  /* background: cornflowerblue; */
 }
