Updated Index.css with a radial gradient background colour

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,4 +16,5 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-image: radial-gradient(#3f5efb, #f0aff0);
 }
