--- a/code/src/Components/ThoughtsMessage.css
+++ b/code/src/Components/ThoughtsMessage.css
@@ -1,6 +1,32 @@
 .message-container {
-    border: 2px solid #000;
+    border: 3px solid #000;
     margin: 10px 0px;
     padding: 20px;
+    min-width: 30%;
+    max-width: 30%;
+    background-color: #fff;
+    box-shadow: #000 8px 6px;
 }
+
+#hearts-button {
+    border-radius: 50%;
+    padding: 5px 7px;
+    margin-right: 10px;
+    width: 35px;
+    height: 35px;
+    border: 2px solid #000;
+}
+
+#hearts-button:hover {
+    cursor: pointer;
+}
+
+.not-liked {
+    background-color: #fff;
+}
+
+.liked {
+    background-color: #ff99ff;
+}
+
 
