--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,17 +1,50 @@
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-body {
   background: rgb(225, 222, 222);
+  font-family: 'Trispace', sans-serif;
+}
+
+.message-card,
+.input-card {
+  margin: 20px auto;
+  border: 2px solid black;
+  width: 500px;
+  box-shadow: 5px 5px;
+  padding: 20px;
+  background-color: #f2f0f0;
+}
+
+.heart-image {
+  height:20px;
+  width:20px
+}
+
+.message-heart {
+  display: flex;
+  flex-direction: column;
+
+}
+
+textarea {
+  font-size: 17px;
+  font-family: 'Trispace', sans-serif;
+  width: 470px;
+  height: 80px;
+  max-width: 470px;
+  max-height: 150px;
+}
+
+.text-counter {
+  font-size: 12px; 
+}
+
+.input-card-button {
+  background-color: #ffadad;
+  border: none;
+  width: 250px;
+  padding: 10px;
+  border-radius: 20px;
+  font-family: 'Trispace', sans-serif;
 }
