--- a/code/src/Components/HappyForm.css
+++ b/code/src/Components/HappyForm.css
@@ -1,10 +1,70 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .form-wrapper {
   align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+form{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-bottom: 5vh;
+  background: rgb(199, 199, 199);
+  border-style: solid;
+  box-shadow: 5px 7px;
+}
+
+h1{
+  margin: 15px;
+}
+
+.post-message{
+  margin: 12px;
+  padding: 10px;
 }
 
 .submit-button{
-  font-size: 1.5em;
+  font-size: 1em;
   border-radius: 25px;
   padding: 10px;
+  margin-left: 12px;
   border: none;
+}
+
+.heart-button-left{
+  height: 20px;
+  margin-right: 5px;
+}
+
+.heart-button-right{
+  height: 20px;
+  margin-left: 5px;
+}
+
+.submit-length{
+  text-align: end;
+  margin-right: 5px;
+}
+
+@media screen and (min-width:768px) {
+  .form {
+      width: 70%;
+  }
+
+  .submit-button{
+    font-size: 1.2em;
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .form {
+      width: 50%;
+  }
 }
