--- a/code/src/Components/MessageList.css
+++ b/code/src/Components/MessageList.css
@@ -1,16 +1,46 @@
-.message{
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.message-wrapper{
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  font-size: 2.3em;
-  margin-bottom: 2vh;
+}
+
+.message{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin-bottom: 5vh;
+  border-style: solid;
+  box-shadow: 5px 7px;
+}
+
+h3{
+  margin: 15px;
 }
 
 .heart-time{
   display: flex;
-  margin-top: 20px;
+  justify-content: space-around;
 }
 
 .heart{
   margin-right: 35%;
+}
+
+@media screen and (min-width:768px) {
+  .message {
+      width: 70%;
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .message {
+      width: 50%;
+  }
 }
