--- a/code/src/components/app.css
+++ b/code/src/components/app.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap");
+
 .thoughts-container {
-  max-width: 500px;
+  max-width: 600px;
   margin: 20px auto;
   padding-bottom: 15px;
   border: 1px solid #000;
@@ -12,4 +14,14 @@ h1 {
   text-align: center;
   margin: 0 auto;
   font-weight: 500;
+  font-family: "Titillium Web", sans-serif;
+}
+.loader {
+  border: 26px solid #ffc0cb;
+  border-top: 26px solid #fe0000;
+  border-radius: 50%;
+  margin: 40px auto;
+  width: 100px;
+  height: 100px;
+  animation: spin 1.9s linear infinite;
 }
