--- a/code/src/components/happyThoughts.css
+++ b/code/src/components/happyThoughts.css
@@ -1,12 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=Trispace:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Trispace:wght@200&family=Turret+Road&display=swap");
+
 .happy-thought {
   border: 2px solid black;
   box-shadow: 4px 4px black;
-  width: 300px;
+  width: 500px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 20px auto;
+  word-wrap: break-word;
   padding: 18px;
   background-color: #ffe9f4;
 }
@@ -15,7 +19,7 @@
   font-size: 18px;
   margin: 0;
   font-weight: 600;
-  /* font-family: to-add later; */
+  font-family: "Trispace", sans-serif;
 }
 
 .happy-thought button {
@@ -50,4 +54,5 @@
 }
 p {
   padding-left: 10px;
+  font-family: "Turret Road", cursive;
 }
