--- a/code/src/styles/happythoughts.css
+++ b/code/src/styles/happythoughts.css
@@ -1,12 +1,13 @@
 .thoughts-box {
   border: 1px solid #000;
   box-shadow: 6px 6px #000;
-  width: 300px;
+  width: 315px;
   min-height: 100px;
   margin: 30px;
   padding: 12px 12px 0 10px;
   display: flex;
   flex-direction: column;
+  word-wrap: break-word;
 }
 
 .thoughts {
@@ -15,17 +16,18 @@
   font-weight: bold;
 }
 
-.time-wrapper {
+.thoughts-footer {
   display: flex;
-  align-self: flex-end;
-  margin: 0;
+  justify-content: space-between;
+  margin: 10px 0;
 }
 
 .time-stamp {
-  font-size: 10px;
+  font-size: 11px;
   color: #dbdbdb;
   padding: 0;
-  margin: 20px 8px 8px 0;
+  margin: 0 0 7px 0;
+  align-self: flex-end;
 }
 
 /* Media queries*/
