--- a/code/src/Components/HappyForm.css
+++ b/code/src/Components/HappyForm.css
@@ -15,14 +15,14 @@ form{
   display: flex;
   flex-direction: column;
   width: 80%;
-  margin-bottom: 5vh;
-  background: rgb(199, 199, 199);
+  margin: 5vh 0;
+  background: rgb(230, 229, 229);
   border-style: solid;
   box-shadow: 5px 7px;
 }
 
 h1{
-  margin: 15px;
+  margin: 15px 15px 0 15px;
 }
 
 .post-message{
@@ -32,9 +32,10 @@ h1{
 
 .submit-button{
   font-size: 1em;
+  background-color: rgb(250, 168, 168);
   border-radius: 25px;
   padding: 10px;
-  margin-left: 12px;
+  margin: 5px 0 0 12px;
   border: none;
 }
 
@@ -54,7 +55,7 @@ h1{
 }
 
 @media screen and (min-width:768px) {
-  .form {
+  form {
       width: 70%;
   }
 
@@ -64,7 +65,7 @@ h1{
 }
 
 @media screen and (min-width:1024px) {
-  .form {
+  form {
       width: 50%;
   }
 }
